@@ -1,5 +1,5 @@
 from buildbot.steps.shell import ShellCommand
-from buildbot.status import event, builder
+from buildbot.status.builder import Event, SUCCESS, FAILURE
 
 class MaxQ(ShellCommand):
     flunkOnFailure = True
@@ -13,8 +13,8 @@ class MaxQ(ShellCommand):
         self.addFactoryArguments(testdir=testdir)
 
     def startStatus(self):
-        evt = event.Event("yellow", ['running', 'maxq', 'tests'],
-                      files={'log': self.log})
+        evt = Event("yellow", ['running', 'maxq', 'tests'],
+                    files={'log': self.log})
         self.setCurrentActivity(evt)
 
 
@@ -25,11 +25,10 @@ class MaxQ(ShellCommand):
         output = self.log.getAll()
         self.failures += output.count('\nTEST FAILURE:')
 
-        result = (builder.SUCCESS, ['maxq'])
+        result = (SUCCESS, ['maxq'])
 
         if self.failures:
-            result = (builder.FAILURE,
-                      [str(self.failures), 'maxq', 'failures'])
+            result = (FAILURE, [str(self.failures), 'maxq', 'failures'])
 
         return self.stepComplete(result)
 
